# robotics-control-system-sim

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/common/: Pose.h  ThreadsafeQueue.h
include/control/: MotionPlanner.h  PIDController.h  StateMachine.h
include/hardware/: ArmDriver.h  EncoderReader.h  HalFactory.h
include/interface/: InputDeviceManager.h  SurgeonConsole.h
include/system/: Logger.h  RealTimeScheduler.h  Watchdog.h
include/vision/: FeatureTracker.h  ImageStream.h
launch/: CMakeLists.txt  launch_robot.cpp
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/control/: CMakeLists.txt  MotionPlanner.cpp  PIDController.cpp  StateMachine.cpp
src/hardware/: ArmDriver.cpp  CMakeLists.txt  EncoderReader.cpp  HalFactory.cpp
src/interface/: CMakeLists.txt  InputDeviceManager.cpp  SurgeonConsole.cpp
src/system/: CMakeLists.txt  Logger.cpp  RealTimeScheduler.cpp  Watchdog.cpp
src/vision/: CMakeLists.txt  FeatureTracker.cpp  ImageStream.cpp
